atttendance and adjustment flow